--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             <p class="idea-1">That's what I was going to do.</p>
             <p class="idea-2"> And I did, but that can't be it right?</p>
             <p class="idea-3">
-                I realised, I wanted to do something more for you my love<br>
-                <strong>special</strong>
+                I realised, I wanted to do something more for you my love,<br>
+                <strong>something even more special</strong>
                 .
             </p>
             <p class="idea-4">Because,</p>
@@ -68,7 +68,7 @@
             <img src="./img/irene.jpg" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
-                <h3 class="wish-hbd">Happiest Birthday my love! </h3>
+                <h2 class="wish-hbd">Happiest Birthday my love! </h2>
                 <h5 id="wishText">to a future that lasts forever and more jaana ;)</h5>
             </div>
         </div>
