--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <div class="nine">
             <p>Okay, now make sure you tell me how much you love me sunshine.</p>
             <p id="replay">Or maybe just click, if you want to watch this again.Only yours, Eisha </p>
-            <p class="last-smile"><3</p>
+            <p class="last-smile">Ɛ></p>
         </div>
     </div>
 
